Code refactor to improve abstraction Client > Interaction structure created to make easier to implement other providers (Facebook, Telegram, etc)
Also created relative path entries in tsconfig.json

WhatsappClient rewrite to just implement ChatClient abstraction methods

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "noFallthroughCasesInSwitch": true,
       "paths": {
         "@whatsapp/*": ["src/whatsapp/*"],
+        "@/*": ["src/*"],
       }
     }
   }
