Adding jest dependency To do unit testing and begin TDD

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "paths": {
         "@whatsapp/*": ["src/whatsapp/*"],
         "@/*": ["src/*"],
+        "@main": ["main.ts"]
       }
     }
   }
