--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "author": "Pedro Papadopolis",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
   "dependencies": {
     "@types/qrcode-terminal": "^0.12.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.1.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^29.1.2",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.3",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
