--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@prisma/client": "4.4.0",
     "@types/qrcode-terminal": "^0.12.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
@@ -23,6 +24,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "jest": "^29.1.2",
+    "prisma": "^4.4.0",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.3",
     "tsconfig-paths": "^4.1.0",
