--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
     "prisma": "^4.4.0",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.3",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint --fix",
+      "pre-push": "yarn test-coverage"
+    }
   }
 }
