--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "lint": "npx eslint"
   },
   "dependencies": {
     "@prisma/client": "4.4.0",
-    "@types/qrcode-terminal": "^0.12.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "@types/qrcode-terminal": "^0.12.0",
     "@types/jest": "^29.1.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "husky": "^8.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.0",
     "jest": "^29.1.2",
     "prisma": "^4.4.0",
     "supertest": "^6.2.4",
