--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "noFallthroughCasesInSwitch": true,
       "paths": {
         "@whatsapp/*": ["src/whatsapp/*"],
-        "@/*": ["src/*"],
+        "@src/*": ["src/*"],
         "@main": ["main.ts"]
       }
     }
