--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@prisma/client": "4.4.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.17.1"
+    "whatsapp-web.js": "^1.17.1",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/jest": "^29.1.1",
     "@types/qrcode-terminal": "^0.12.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.25.0",
