--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "lint": "npx eslint src/*"
+    "lint": "npx eslint src/*",
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "@prisma/client": "4.4.0",
