Fix workflow paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
     paths:
-      - src/*
-      - tests/*
+      - src/**
+      - tests/**
       - '*.json'
       - yarn.lock
   pull_request:
