--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "4.4.0",
     "qrcode-terminal": "^0.12.0",
+    "rxjs": "^7.6.0",
     "whatsapp-web.js": "^1.18.2",
     "winston": "^3.8.2"
   },
